# ipa_calibration

./: .travis.rosinstall  .travis.yml  CMakeLists.txt  README.md  package.xml  readme.md
calibration_interface/: CMakeLists.txt
cfg/: CheckerboardLocalisation.cfg  RelativeLocalization.cfg
common/files/: PiTags.txt
common/src/: calibration_utilities.cpp  file_utilities.cpp  relative_localization_utilities.cpp  transformation_utilities.cpp
ipa_calibration/: CMakeLists.txt  package.xml
ipa_calibration_interface/: CMakeLists.txt  package.xml
ipa_calibration_interface/common/files/: PiTags.txt
ipa_calibration_interface/common/include/ipa_calibration_interface/: pose_definition.h
ipa_calibration_interface/common/src/: pose_definition.cpp
ipa_calibration_interface/ros/include/ipa_calibration_interface/: calibration_marker.h  calibration_type.h  camera_arm_type.h  camera_laserscanner_type.h  checkerboard_marker.h  cob4_interface.h  cob_interface.h  ipa_interface.h  pitag_marker.h  raw3_interface.h  raw_interface.h  robotino_interface.h
ipa_calibration_interface/ros/launch/: calibration.rviz  camera_arm_calibration.launch  camera_laserscanner_calibration.launch  checkerboard_marker.launch  checkerboard_setup.launch  pitag_markers.launch  pitag_setup.launch
ipa_calibration_interface/ros/launch/calibration_settings/: camera_arm_calibration_params_raw3.yaml  camera_arm_calibration_params_robotino.yaml  camera_laserscanner_calibration_checkerboard_params_robotino.yaml  camera_laserscanner_calibration_pitag_params_RAW.yaml  camera_laserscanner_calibration_pitag_params_cob.yaml  camera_laserscanner_calibration_pitag_params_cob4.yaml  camera_laserscanner_calibration_pitag_params_raw3.yaml  camera_laserscanner_calibration_pitag_params_robotino.yaml
ipa_calibration_interface/ros/launch/calibration_settings/Default/: camera_arm_calibration_params_default.yaml  camera_laserscanner_calibration_checkerboard_params_default.yaml  camera_laserscanner_calibration_pitag_params_default.yaml
ipa_calibration_interface/ros/launch/detection_settings/Default/: checkerboard_detection_settings_default.yaml
ipa_calibration_interface/ros/launch/pi_tag/: fiducials.launch
ipa_calibration_interface/ros/launch/robot_settings/: RAW_settings.yaml  cob_settings.yaml  raw3_settings.yaml  robotino_settings.yaml
ipa_calibration_interface/ros/launch/robot_settings/Default/: default_settings.yaml
ipa_calibration_interface/ros/src/: calibration_marker.cpp  calibration_type.cpp  camera_arm_calibration_node.cpp  camera_arm_type.cpp  camera_laserscanner_calibration_node.cpp  camera_laserscanner_type.cpp  checkerboard_detection_node.cpp  checkerboard_marker.cpp  cob4_interface.cpp  cob_interface.cpp  ipa_interface.cpp  pitag_detection_node.cpp  pitag_marker.cpp  raw3_interface.cpp  raw_interface.cpp  robotino_interface.cpp
jointstate_saver/: CMakeLists.txt
jointstate_saver/launch/: saver.launch
jointstate_saver/src/: jointstate_saver_node.cpp
launch/: saver.launch  transfer_params.yaml
libcalibration/: CMakeLists.txt  package.xml
libcalibration/common/include/libcalibration/: file_utilities.h  time_utilities.h  transformation_utilities.h
libcalibration/common/src/: file_utilities.cpp  time_utilities.cpp  transformation_utilities.cpp
libcalibration/ros/include/libcalibration/: calibration_interface.h  robot_calibration.h
libcalibration/ros/src/: calibration_interface.cpp  robot_calibration.cpp
relative_localization/: CMakeLists.txt  package.xml  readme.md
relative_localization/cfg/: RelativeLocalization.cfg
robotino_calibration/: CMakeLists.txt  package.xml  readme.md
robotino_calibration/common/include/robotino_calibration/: file_utilities.h
robotino_calibration/common/src/: transformation_utilities.cpp
robotino_calibration/ros/include/robotino_calibration/: calibration_interface.h
robotino_calibration/ros/src/: calibration_interface.cpp  robot_calibration.cpp
ros/launch/: arm_base_calibration.launch  arm_base_calibration_params.yaml  arm_base_calibration_params_RAW.yaml  arm_base_calibration_params_Robotino.yaml  arm_base_calibration_params_kukadu.yaml  box_localization.launch  box_localization_params.yaml  camera_arm_calibration.launch  camera_base_calibration.launch  camera_base_calibration_checkerboard.launch  camera_base_calibration_checkerboard_params.yaml  camera_base_calibration_params.yaml  camera_base_calibration_pitag.launch  camera_base_calibration_pitag_2.launch  camera_base_calibration_pitag_params.yaml  camera_base_calibration_pitag_params_RAW.yaml  camera_laserscanner_calibration.launch  checkerboard_localisation.launch  checkerboard_localisation_params.yaml  checkerboard_localization.launch  checkerboard_marker.launch  checkerboard_setup.launch  corner_localization.launch  corner_localization_params.yaml  corner_localization_params_RAW.yaml  pitag_markers.launch  pitag_setup.launch  static_transforms.launch
ros/src/: arm_base_calibration.cpp  arm_base_calibration_kukadu.cpp  arm_base_calibration_node.cpp  box_localization.cpp  calibration_interface.cpp  calibration_marker.cpp  calibration_type.cpp  camera_arm_calibration_node.cpp  camera_arm_type.cpp  camera_base_calibration.cpp  camera_base_calibration_checkerboard.cpp  camera_base_calibration_marker.cpp  camera_base_calibration_node.cpp  camera_base_calibration_pitag.cpp  camera_laserscanner_calibration_node.cpp  camera_laserscanner_type.cpp  checkerboard_detection_node.cpp  checkerboard_localisation.cpp  checkerboard_localisation_node.cpp  checkerboard_localization.cpp  checkerboard_marker.cpp  cob_interface.cpp  corner_localization.cpp  custom_interface.cpp  ipa_interface.cpp  pitag_detection_node.cpp  pitag_marker.cpp  raw_interface.cpp  reference_localization.cpp  relative_localization_node.cpp  (+2 more)
squirrel_calibration/: package.xml
src/: control_arm.py  jointstate_saver_node.cpp  transfer_calibration_node.cpp
transfer_calibration/: CMakeLists.txt  package.xml
transfer_calibration/launch/: transfer.launch  transfer_params.yaml
transfer_calibration/src/: transfer_calibration_node.cpp
(+99 files in other folders)
