<?xml version="1.0"?>
<package format="2">
  <name>transfer_calibration</name>
  <version>0.0.0</version>
  <description>Allows to transfer the calibration results to an external xml file</description>

  <maintainer email="m.riedlinger@live.de">Marc Riedlinger</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
</package>
