<?xml version="1.0"?>
<package format="2">
	<name>calibration_interface</name>
	<version>0.0.0</version>
	<description>Package that users can add different robots to in order to be used for camera-base or arm-base calibration.</description>

	<maintainer email="marc.riedlinger@ipa.fraunhofer.de">Marc Riedlinger</maintainer>
	<license>LGPL</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>robotino_calibration</depend>
	<depend>std_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>actionlib</depend>
	<depend>boost</depend>
	<depend>trajectory_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>control_msgs</depend>
	<depend>tf</depend>

</package>
