<?xml version="1.0"?>
<package format="2">
	<name>robotino_calibration</name>
	<version>0.0.0</version>
	<description>The robotino_calibration package. Contains methods for camera base calibration via calibration checkerboards or via detecting specialized markers.</description>

	<license>LGPL</license>
	<url type="website">http://wiki.ros.org/robotino_calibration</url>

	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<author email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</author>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>boost</depend>
	<!-- <depend>cob_fiducials</depend> -->
	<!-- <depend>cob_object_detection_msgs</depend> -->
	<!-- <depend>cv_bridge</depend> -->
	<!-- <depend>geometry_msgs</depend> -->
	<!-- <depend>image_transport</depend> -->
	<depend>libopencv-dev</depend>
	<!-- <depend>libeigen3-dev</depend> -->
	<depend>roscpp</depend>
	<depend>roslib</depend>
	<!-- <depend>sensor_msgs</depend> -->
	<!-- <depend>std_msgs</depend> -->
	<depend>tf</depend>

</package>
