<?xml version="1.0"?>
<package>
  <name>squirrel_calibration</name>
  <version>0.0.0</version>
  <description>This repository holds packages for calibrate the robot components</description>

  <license>LGPL</license>

  <maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
  <author email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</author>
  <author email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</author>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>calibration_interface</run_depend>
  <run_depend>jointstate_saver</run_depend>
  <run_depend>relative_localization</run_depend>
  <run_depend>robotino_calibration</run_depend>
  <run_depend>transfer_calibration</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
