<?xml version="1.0"?>
<package format="2">
	<name>transfer_calibration</name>
	<version>0.0.0</version>
	<description>Allows to transfer the calibration results to an external xml file.</description>

	<maintainer email="marc.riedlinger@ipa.fraunhofer.de">Marc Riedlinger</maintainer>
	<license>LGPL</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>

</package>
